# mail2pr

./: default.nix  new-file  pyproject.toml
mail2pr/: __init__.py  utils.py
nix/: sources.json
tests/: test_utils.py
tests/fixtures/: 1608054753.R10639372170588705026.wrt
